--- a/20250510T171656--bibliography-psalms__torah.org
+++ b/20250510T171656--bibliography-psalms__torah.org
@@ -4,5 +4,7 @@
 #+identifier: 20250510T171656
 
 
-1000 Alphabet The Golden The, C.H. Spurgeon's Commentary on Psalm 119
-1100 Psalms On the Book of (Exploration the Prayers of Ancient Israel): , Nahum M. Sarna
+|DDC1|DDC2 |Title|Subtitle| Author|
+|------|------|--------------|-----------------------------------------------------------|
+|248.4|248.4| Alphabet The Golden The|Commentary on Psalm 119| C.H. Spurgeon's |
+|223.2|248.3| Psalms On the Book of (Exploration the Prayers of Ancient Israel)|Nahum M. Sarna|
