--- a/20250510T171656--bibliography-psalms__torah.org
+++ b/20250510T171656--bibliography-psalms__torah.org
@@ -7,4 +7,5 @@
 |DDC1|DDC2 |Title|Subtitle| Author|
 |------|------|--------------|-----------------------------------------------------------|
 |248.4|248.4| Alphabet The Golden The|Commentary on Psalm 119| C.H. Spurgeon's |
-|223.2|248.3| Psalms On the Book of (Exploration the Prayers of Ancient Israel)|Nahum M. Sarna|
+|223.2|248.3| Psalms On the Book of |Exploration the Prayers of Ancient Israel|Nahum M. Sarna|
+|220.52|220.2|Thompson's Chain-Reference Bible||Dr. Frank Charles Thompson(and Wife)|
