--- a/20250512T172557--v1121-psalms-righteous-vs-wicked__law_wisdom_prayer_spirtitual_longing.org
+++ b/20250512T172557--v1121-psalms-righteous-vs-wicked__law_wisdom_prayer_spirtitual_longing.org
@@ -5,3 +5,7 @@
 
 (1,2) Blessed is the man that walketh not in the counsel of the wicked,
 Nor standeth in the way of sinners, Nor sitteth in the set of scoffers: But his delight is in the lawof Jehovah; And on hist law(Torah) doth he meditate day and night.
+
+
+Bib:
+- [[denote:20250512T193932][B001-The-Holy-Bible-American-Standard-Verson]]
